First 15 problems of exercise 3

--- a/NLTK Chapter 3.ipynb
+++ b/NLTK Chapter 3.ipynb
@@ -1593,7 +1593,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "path=nltk.data.find('corpora/unicode_samples/polish-lat2.txt')"
@@ -1602,7 +1604,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import codecs\n",
@@ -1663,7 +1667,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import re\n",
@@ -2480,11 +2486,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Notice that our regular expression removed the s from ponds but also from is and\n",
     "basis. It produced some non-words, such as distribut and deriv, but these are acceptable\n",
@@ -2602,6 +2603,438 @@
     "from nltk.corpus import brown\n",
     "hobbies_learned = nltk.Text(brown.words(categories=['hobbies','learned']))\n",
     "hobbies_learned.findall(r'<\\w*> <and><other><\\w*s>')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Normalizing Text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In earlier program examples we have often converted text to lowercase before doing\n",
+    "anything with its words, e.g., set(w.lower() for w in text). By using lower(), we have\n",
+    "normalized the text to lowercase so that the distinction between The and the is ignored.\n",
+    "Often we want to go further than this and strip off any affixes, a task known as stemming.\n",
+    "A further step is to make sure that the resulting form is a known word in a\n",
+    "dictionary, a task known as lemmatization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "raw = \"\"\"DENNIS: Listen, strange women lying in ponds distributing swords\n",
+    "... is no basis for a system of government. Supreme executive power derives from\n",
+    "... a mandate from the masses, not from some farcical aquatic ceremony.\"\"\"\n",
+    "tokens = nltk.word_tokenize(raw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['DENNIS', ':', 'Listen', ',', 'strange', 'women', 'lying', 'in', 'ponds', 'distributing', 'swords', 'is', 'no', 'basis', 'for', 'a', 'system', 'of', 'government', '.', 'Supreme', 'executive', 'power', 'derives', 'from', 'a', 'mandate', 'from', 'the', 'masses', ',', 'not', 'from', 'some', 'farcical', 'aquatic', 'ceremony', '.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tokens)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Stemmers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['denni', ':', 'listen', ',', 'strang', 'women', 'lie', 'in', 'pond', 'distribut', 'sword', 'is', 'no', 'basi', 'for', 'a', 'system', 'of', 'govern', '.', 'suprem', 'execut', 'power', 'deriv', 'from', 'a', 'mandat', 'from', 'the', 'mass', ',', 'not', 'from', 'some', 'farcic', 'aquat', 'ceremoni', '.']\n",
+      "['den', ':', 'list', ',', 'strange', 'wom', 'lying', 'in', 'pond', 'distribut', 'sword', 'is', 'no', 'bas', 'for', 'a', 'system', 'of', 'govern', '.', 'suprem', 'execut', 'pow', 'der', 'from', 'a', 'mand', 'from', 'the', 'mass', ',', 'not', 'from', 'som', 'farc', 'aqu', 'ceremony', '.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "porter = nltk.PorterStemmer()\n",
+    "lancaster = nltk.LancasterStemmer()\n",
+    "print([porter.stem(t) for t in tokens])# \"Handles 'lying' correctly to 'lie'\"\n",
+    "print([lancaster.stem(t) for t in tokens])#\"Handles lying incorrectly\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Porter Stemmer is a good choice if you are indexing some texts and want to support search using alternative forms of words"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Lemmatization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The WordNet lemmatizer removes affixes only if the resulting word is in its dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['DENNIS', ':', 'Listen', ',', 'strange', 'woman', 'lying', 'in', 'pond', 'distributing', 'sword', 'is', 'no', 'basis', 'for', 'a', 'system', 'of', 'government', '.', 'Supreme', 'executive', 'power', 'derives', 'from', 'a', 'mandate', 'from', 'the', 'mass', ',', 'not', 'from', 'some', 'farcical', 'aquatic', 'ceremony', '.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "wnl = nltk.WordNetLemmatizer()\n",
+    "print([wnl.lemmatize(t) for t in tokens])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The WordNet lemmatizer is a good choice if you want to compile the vocabulary of\n",
+    "some texts and want a list of valid lemmas (or lexicon headwords)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Regular Expressions for Tokenizing Text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tokenization is the task of cutting a string into identifiable linguistic units that constitute\n",
+    "a piece of language data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"'When\", \"I'M\", 'a', \"Duchess,'\", 'she', 'said', 'to', 'herself,', '(not', 'in', 'a', 'very', 'hopeful', 'tone\\nthough),', \"'I\", \"won't\", 'have', 'any', 'pepper', 'in', 'my', '', 'kitchen', 'AT', 'ALL.', 'Soup', 'does', 'very\\nwell', 'without--Maybe', \"it's\", 'always', 'pepper', 'that', 'makes', 'people', \"hot-tempered,'...\"]\n"
+     ]
+    }
+   ],
+   "source": [
+    "raw = \"\"\"'When I'M a Duchess,' she said to herself, (not in a very hopeful tone\n",
+    "... though), 'I won't have any pepper in my  kitchen AT ALL. Soup does very\n",
+    "... well without--Maybe it's always pepper that makes people hot-tempered,'...\"\"\"\n",
+    "print(re.split(r' ', raw))#Notice the new line chars are not split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"'When\", \"I'M\", 'a', \"Duchess,'\", 'she', 'said', 'to', 'herself,', '(not', 'in', 'a', 'very', 'hopeful', 'tone', 'though),', \"'I\", \"won't\", 'have', 'any', 'pepper', 'in', 'my', 'kitchen', 'AT', 'ALL.', 'Soup', 'does', 'very', 'well', 'without--Maybe', \"it's\", 'always', 'pepper', 'that', 'makes', 'people', \"hot-tempered,'...\"]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.split(r'[ \\t\\n]+', raw))#split at new line and tab characters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"'When\", \"I'M\", 'a', \"Duchess,'\", 'she', 'said', 'to', 'herself,', '(not', 'in', 'a', 'very', 'hopeful', 'tone', 'though),', \"'I\", \"won't\", 'have', 'any', 'pepper', 'in', 'my', '', 'kitchen', 'AT', 'ALL.', 'Soup', 'does', 'very', 'well', 'without--Maybe', \"it's\", 'always', 'pepper', 'that', 'makes', 'people', \"hot-tempered,'...\"]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.split(r'[ \\t\\n]', raw))# wihtout the plus. Notice element before the kitchen token"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"'When\", \"I'M\", 'a', \"Duchess,'\", 'she', 'said', 'to', 'herself,', '(not', 'in', 'a', 'very', 'hopeful', 'tone', 'though),', \"'I\", \"won't\", 'have', 'any', 'pepper', 'in', 'my', '', 'kitchen', 'AT', 'ALL.', 'Soup', 'does', 'very', 'well', 'without--Maybe', \"it's\", 'always', 'pepper', 'that', 'makes', 'people', \"hot-tempered,'...\"]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.split(r'\\s', raw))#for any white space character split"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\w is equivalent to [a-zA-Z0-9_]. <br>\n",
+    "\\W is complement of \\w- All charaters other than letters, numbers or underscores."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['', 'When', 'I', 'M', 'a', 'Duchess', 'she', 'said', 'to', 'herself', 'not', 'in', 'a', 'very', 'hopeful', 'tone', 'though', 'I', 'won', 't', 'have', 'any', 'pepper', 'in', 'my', 'kitchen', 'AT', 'ALL', 'Soup', 'does', 'very', 'well', 'without', 'Maybe', 'it', 's', 'always', 'pepper', 'that', 'makes', 'people', 'hot', 'tempered', '']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.split(r'\\W+', raw))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['', '', '']"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'xx'.split('x')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['When', 'I', 'M', 'a', 'Duchess', 'she', 'said', 'to', 'herself', 'not', 'in', 'a', 'very', 'hopeful', 'tone', 'though', 'I', 'won', 't', 'have', 'any', 'pepper', 'in', 'my', 'kitchen', 'AT', 'ALL', 'Soup', 'does', 'very', 'well', 'without', 'Maybe', 'it', 's', 'always', 'pepper', 'that', 'makes', 'people', 'hot', 'tempered']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.findall(r'\\w+', raw))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['W', 'h', 'e', 'n', 'I', 'M', 'a', 'D', 'u', 'c', 'h', 'e', 's', 's', 's', 'h', 'e', 's', 'a', 'i', 'd', 't', 'o', 'h', 'e', 'r', 's', 'e', 'l', 'f', 'n', 'o', 't', 'i', 'n', 'a', 'v', 'e', 'r', 'y', 'h', 'o', 'p', 'e', 'f', 'u', 'l', 't', 'o', 'n', 'e', 't', 'h', 'o', 'u', 'g', 'h', 'I', 'w', 'o', 'n', 't', 'h', 'a', 'v', 'e', 'a', 'n', 'y', 'p', 'e', 'p', 'p', 'e', 'r', 'i', 'n', 'm', 'y', 'k', 'i', 't', 'c', 'h', 'e', 'n', 'A', 'T', 'A', 'L', 'L', 'S', 'o', 'u', 'p', 'd', 'o', 'e', 's', 'v', 'e', 'r', 'y', 'w', 'e', 'l', 'l', 'w', 'i', 't', 'h', 'o', 'u', 't', 'M', 'a', 'y', 'b', 'e', 'i', 't', 's', 'a', 'l', 'w', 'a', 'y', 's', 'p', 'e', 'p', 'p', 'e', 'r', 't', 'h', 'a', 't', 'm', 'a', 'k', 'e', 's', 'p', 'e', 'o', 'p', 'l', 'e', 'h', 'o', 't', 't', 'e', 'm', 'p', 'e', 'r', 'e', 'd']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.findall(r'\\w', raw))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The regular expression «\\w+|\\S\\w*» will first\n",
+    "try to match any sequence of word characters. If no match is found, it will try to match\n",
+    "any non-whitespace character (\\S is the complement of \\s) followed by further word\n",
+    "characters. This means that punctuation is grouped with any following letters\n",
+    "(e.g., ’s) but that sequences of two or more punctuation characters are separated."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"'When\", 'I', \"'M\", 'a', 'Duchess', ',', \"'\", 'she', 'said', 'to', 'herself', ',', '(not', 'in', 'a', 'very', 'hopeful', 'tone', 'though', ')', ',', \"'I\", 'won', \"'t\", 'have', 'any', 'pepper', 'in', 'my', 'kitchen', 'AT', 'ALL', '.', 'Soup', 'does', 'very', 'well', 'without', '-', '-Maybe', 'it', \"'s\", 'always', 'pepper', 'that', 'makes', 'people', 'hot', '-tempered', ',', \"'\", '.', '.', '.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.findall(r'\\w+|\\S\\w*', raw))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "«\\w+([-']\\w+)*». This expression means \\w+ followed by zero or more instances of [-']\\w+; it would match hot-tempered and it’s. (We need to include ?: in this expression for reasons discussed earlier.) We’ll also add a pattern to match quote characters so these are kept separate from the text they enclose. The expression in this example also included «[-.(]+», which causes the double hyphen, ellipsis, and open parenthesis to be tokenized separately."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"'\", 'When', '', \"I'M\", '', 'a', '', 'Duchess', ',', \"'\", '', 'she', '', 'said', '', 'to', '', 'herself', ',', '', '(', 'not', '', 'in', '', 'a', '', 'very', '', 'hopeful', '', 'tone', '', 'though', ')', ',', '', \"'\", 'I', '', \"won't\", '', 'have', '', 'any', '', 'pepper', '', 'in', '', 'my', '', '', 'kitchen', '', 'AT', '', 'ALL', '.', '', 'Soup', '', 'does', '', 'very', '', 'well', '', 'without', '--', 'Maybe', '', \"it's\", '', 'always', '', 'pepper', '', 'that', '', 'makes', '', 'people', '', 'hot-tempered', ',', \"'\", '...', '']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.findall(r\"\\w+(?:[-']\\w+)*|'|[-.(]+|\\S|w*\", raw))"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "For tokenization nltk.regexp_tokenize is more efficient than re.findall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('A.', '', ''), ('', '', '.40')]"
+      ]
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = 'That U.S.A. poster-print costs $12.40...'\n",
+    "pattern = r'''(?x)\n",
+    "([A-Z]\\.)+\n",
+    "|w+(-\\w+)*\n",
+    "|\\$?\\d+(\\.\\d+)?%?\n",
+    "|\\.\\.\\.\n",
+    "\\[][.,;\"'?():-_`]\n",
+    "'''\n",
+    "nltk.regexp_tokenize(text, pattern)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The special (?x) “verbose flag” tells Python to strip out the embedded whitespace and comments. When using the verbose flag, you can no longer use ' ' to match a space character; use \\s instead. The regexp_tokenize() function has an optional gaps parameter. When set to True, the regular expression specifies the gaps between tokens, as with re.split()."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can evaluate a tokenizer by comparing the resulting tokens with a\n",
+    "wordlist, and then report any tokens that don’t appear in the wordlist,\n",
+    "using set(tokens).difference(wordlist). You’ll probably want to\n",
+    "lowercase all the tokens first."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('%d %d'% (4,3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "\n",
+    "\\D Any non-digit character (equivalent to [^0-9])<br>\n",
+    "\\s Any whitespace character (equivalent to [ \\t\\n\\r\\f\\v]\n",
+    "<br>\\S Any non-whitespace character (equivalent to [^ \\t\\n\\r\\f\\v])<br>\n",
+    "\\w Any alphanumeric character (equivalent to [a-zA-Z0-9_])<br>\n",
+    "\\W Any non-alphanumeric character (equivalent to [^a-zA-Z0-9_])<br>\n",
+    "\\t The tab character<br>\n",
+    "\\n The newline character"
    ]
   },
   {
