Transformation based tagging

--- a/NLTK Chapter 5.ipynb
+++ b/NLTK Chapter 5.ipynb
@@ -4347,6 +4347,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Transformation-Based Tagging"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Problem with n-gram tagginf:<br>\n",
+    "1. Gigantic Size\n",
+    "2. Only information considered from prior context is tags"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Brill Tagging** : guess the tag of each word, then go back and fix the mistakes. In this way, a Brill tagger successively transforms a bad taggin of text into a better one.<br>\n",
+    "n-gram tagging is supervised learning method.<br>\n",
+    "However, unlike n-gram tagging, it doesn't count observations but compiles a list of transformational correction rules."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'nltk.tag.brill' has no attribute 'demo'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<timed eval>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'nltk.tag.brill' has no attribute 'demo'"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "nltk.tag.brill.demo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('near', 'IN')]"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.pos_tag(['near'])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
