nltk6 exercises que 2 again

--- a/NLTK Chapter 6 Execises.ipynb
+++ b/NLTK Chapter 6 Execises.ipynb
@@ -339,8 +339,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -436,7 +438,20 @@
       "            84          -0.34038        0.803\n",
       "            85          -0.33985        0.803\n",
       "            86          -0.33933        0.803\n",
-      "            87          -0.33882        0.803\n"
+      "            87          -0.33882        0.803\n",
+      "            88          -0.33832        0.803\n",
+      "            89          -0.33784        0.803\n",
+      "            90          -0.33736        0.803\n",
+      "            91          -0.33690        0.804\n",
+      "            92          -0.33645        0.804\n",
+      "            93          -0.33600        0.804\n",
+      "            94          -0.33557        0.804\n",
+      "            95          -0.33514        0.804\n",
+      "            96          -0.33473        0.804\n",
+      "            97          -0.33432        0.804\n",
+      "            98          -0.33392        0.805\n",
+      "            99          -0.33353        0.804\n",
+      "         Final          -0.33315        0.805\n"
      ]
     }
    ],
@@ -446,9 +461,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.787\n",
+      "0.8008474576271186\n"
+     ]
+    }
+   ],
    "source": [
     "print(nltk.classify.accuracy(csf2, dev_set))\n",
     "print(nltk.classify.accuracy(csf2, test_set))"
