chap 7 exercise 7 qs

--- a/NLTK Chapter 7.ipynb
+++ b/NLTK Chapter 7.ipynb
@@ -147,7 +147,7 @@
    "metadata": {},
    "source": [
     "##### Tag Patterns\n",
-    "The rules that make up a chunk grammar use tag patterns to describe sequences of tagged words. A tag pattern is a sequence of part-of-speech tags delimited using angle brackets, e.g. <DT>?<JJ>*<NN>. Tag patterns are similar to regular expression patterns"
+    "The rules that make up a chunk grammar use tag patterns to describe sequences of tagged words. **A tag pattern is a sequence of part-of-speech tags delimited using angle brackets**, e.g: <\\DT>?<\\JJ>*<\\NN>. Tag patterns are similar to regular expression patterns"
    ]
   },
   {
@@ -4454,7 +4454,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(conll2000.chunked_sents('train.txt')[99])#prints the 100th sentece"
@@ -4463,7 +4465,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(type(conll2000.chunked_sents('train.txt')[99]))#prints the 100th sentece"
@@ -4480,7 +4484,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(conll2000.chunked_sents('train.txt', chunk_types = ['NP'])[99])"
@@ -4496,7 +4502,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cp = nltk.RegexpParser('')\n",
@@ -4507,7 +4515,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "grammar = r\"NP: {<[CDJNP].*>+}\"\n",
@@ -4852,7 +4862,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "chunker = ConsecutiveNPChunker(train_sents)\n",
@@ -5356,7 +5368,9 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "vnv = \"\"\"\n",
