--- a/NLTK Chapter 7.ipynb
+++ b/NLTK Chapter 7.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -5170,7 +5170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -5238,6 +5238,80 @@
    "source": [
     "sent = nltk.corpus.treebank.tagged_sents()[22]\n",
     "print(nltk.ne_chunk(sent, binary = True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('The', 'DT'),\n",
+       " ('U.S.', 'NNP'),\n",
+       " ('is', 'VBZ'),\n",
+       " ('one', 'CD'),\n",
+       " ('of', 'IN'),\n",
+       " ('the', 'DT'),\n",
+       " ('few', 'JJ'),\n",
+       " ('industrialized', 'VBN'),\n",
+       " ('nations', 'NNS'),\n",
+       " ('that', 'WDT'),\n",
+       " ('*T*-7', '-NONE-'),\n",
+       " ('does', 'VBZ'),\n",
+       " (\"n't\", 'RB'),\n",
+       " ('have', 'VB'),\n",
+       " ('a', 'DT'),\n",
+       " ('higher', 'JJR'),\n",
+       " ('standard', 'NN'),\n",
+       " ('of', 'IN'),\n",
+       " ('regulation', 'NN'),\n",
+       " ('for', 'IN'),\n",
+       " ('the', 'DT'),\n",
+       " ('smooth', 'JJ'),\n",
+       " (',', ','),\n",
+       " ('needle-like', 'JJ'),\n",
+       " ('fibers', 'NNS'),\n",
+       " ('such', 'JJ'),\n",
+       " ('as', 'IN'),\n",
+       " ('crocidolite', 'NN'),\n",
+       " ('that', 'WDT'),\n",
+       " ('*T*-1', '-NONE-'),\n",
+       " ('are', 'VBP'),\n",
+       " ('classified', 'VBN'),\n",
+       " ('*-5', '-NONE-'),\n",
+       " ('as', 'IN'),\n",
+       " ('amphobiles', 'NNS'),\n",
+       " (',', ','),\n",
+       " ('according', 'VBG'),\n",
+       " ('to', 'TO'),\n",
+       " ('Brooke', 'NNP'),\n",
+       " ('T.', 'NNP'),\n",
+       " ('Mossman', 'NNP'),\n",
+       " (',', ','),\n",
+       " ('a', 'DT'),\n",
+       " ('professor', 'NN'),\n",
+       " ('of', 'IN'),\n",
+       " ('pathlogy', 'NN'),\n",
+       " ('at', 'IN'),\n",
+       " ('the', 'DT'),\n",
+       " ('University', 'NNP'),\n",
+       " ('of', 'IN'),\n",
+       " ('Vermont', 'NNP'),\n",
+       " ('College', 'NNP'),\n",
+       " ('of', 'IN'),\n",
+       " ('Medicine', 'NNP'),\n",
+       " ('.', '.')]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sent"
    ]
   },
   {
