--- a/NLTK Chapter 8.ipynb
+++ b/NLTK Chapter 8.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -17,7 +17,8 @@
    "source": [
     "import nltk, pprint\n",
     "from nltk.corpus import treebank, ppattach\n",
-    "from collections import defaultdict"
+    "from collections import defaultdict\n",
+    "from nltk import Tree"
    ]
   },
   {
@@ -205,7 +206,9 @@
    "metadata": {},
    "source": [
     "### Context Free Grammar\n",
-    "##### A Simple Grammar"
+    "##### A Simple Grammar\n",
+    "\n",
+    "> **In NLTK, context-free grammars are defined in the nltk.grammar module. **"
    ]
   },
   {
@@ -217,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -301,6 +304,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    ">**When you write CFGs for parsing in NLTK, you cannot combine grammatical categories with lexical items on the righthand side of the same production. Thus, a production such as PP -> 'of' NP is disallowed. In addition, you are not permitted to place multi-word lexical items on the righthand side of a production. So rather than writing NP -> 'New\n",
+    "York', you have to resort to something like NP -> 'New_York' instead.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### Recursion in Syntactic Structure\n",
     "\n",
     "Recursive if category occuring on the left hand side of a prodution also appears on the righthand side of production."
@@ -308,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +440,9 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def init_wfst(tokens, grammar):\n",
@@ -552,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +804,9 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def filter(tree):\n",
@@ -1121,7 +1136,9 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def give(t):\n",
@@ -1163,7 +1180,9 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "grammar = nltk.PCFG.fromstring(\"\"\"\n",
