--- a/NLTK Chapter 9.ipynb
+++ b/NLTK Chapter 9.ipynb
@@ -420,7 +420,331 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The bracketed integer is sometimes called a tag or a coindex. The choice of integer is not significant. There can be any number of tags within a single feature structure."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ A = 'a'             ]\n",
+      "[                     ]\n",
+      "[ B = (1) [ C = 'c' ] ]\n",
+      "[                     ]\n",
+      "[ D -> (1)            ]\n",
+      "[ E -> (1)            ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nltk.FeatStruct(\"[A = 'a', B=(1)[C= 'c'], D->(1), E->(1)]\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Subsumption and Unification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is standard to think of feature structures as providing partial information about some object, in the sense that we can order feature structures according to how much information they contain.\n",
+    "\n",
+    "(23)\n",
+    "a.  [NUMBER =74]\n",
+    "\n",
+    "b.  [NUMBER =74]\n",
+    "    [STREET = 'RUE PASCAL]\n",
+    "\n",
+    "c. [NUMBER =74]\n",
+    "    [STREET = 'RUE PASCAL]\n",
+    "    [CITY = 'PARIS]\n",
+    "    \n",
+    "This ordering is called **subsumption**. FS0 subsumes FS1 if all information contained in FS0 is also contained in Fs1. We use the symbol ⊑ to represent subsumption.\n",
+    "\n",
+    "When we add the possibility of reentrancy, we need to be more careful about how we describe subsumption: if FS0 ⊑ FS1, then FS1 must have all the paths and reentrancies of FS0.\n",
+    "\n",
+    "So we have seen that some feature structures carry more information than others. How do we go about adding more information to a given feature structure? For example, we might decide that addresses should consist of not just a street number and a street name, but also a city. \n",
+    "\n",
+    "Merging information from two features is called **unification** and is supported by **unify()** method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[CITY='PARIS', NUMBER=74, STREET='RUE PASCAL']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fs1 = nltk.FeatStruct(NUMBER = 74, STREET = 'RUE PASCAL')\n",
+    "fs2 = nltk.FeatStruct(CITY = 'PARIS')\n",
+    "fs1.unify(fs2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[NUMBER=74, STREET='RUE PASCAL']"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fs1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Unification is formally defined as a (partial) binary operation: FS0 ⊔ FS1. Unification is symmetric, so FS0 ⊔ FS1 = FS1 ⊔ FS0. The same is true in Python:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[CITY='PARIS', NUMBER=74, STREET='RUE PASCAL']"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fs2.unify(fs1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we unify two feature structures which stand in the subsumption relationship, then the result of unification is the most informative of the two:\n",
+    "\n",
+    "If FS0 ⊑ FS1, then FS0 ⊔ FS1 = FS1\n",
+    "\n",
+    "Unification between FS0 and FS1 will fail if the two feature structures share a path π, but the value of π in FS0 is a distinct atom from the value of π in FS1. This is implemented by setting the result of unification to be None."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "fs0 = nltk.FeatStruct(A = 'a')\n",
+    "fs1 = nltk.FeatStruct(A = 'b')\n",
+    "print(fs0.unify(fs1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ A = 'a' ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "fs2 = nltk.FeatStruct(A = 'a')\n",
+    "print(fs0.unify(fs2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, if we look at how unification interacts with structure-sharing, things become really interesting. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ SPOUSE = [ ADDRESS = [ CITY = 'PARIS' ] ] ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "fs0 = nltk.FeatStruct(\"\"\"[NAME = 'LEE', ADDRESS = [NUMBER = 74, STREET = 'RUE PASCAL'],\n",
+    "                     AGE = 33, SPOUSE = [NAME = 'KIM', ADDRESS = [NUMBER = 74, STREET = 'RUE PASCAL']]]\"\"\")\n",
+    "print(fs1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What happens when we augment Kim's address with a specification for CITY? Notice that fs1 needs to include the whole path from the root of the feature structure down to CITY."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ ADDRESS = [ NUMBER = 74           ]               ]\n",
+      "[           [ STREET = 'RUE PASCAL' ]               ]\n",
+      "[                                                   ]\n",
+      "[ AGE     = 33                                      ]\n",
+      "[ NAME    = 'LEE'                                   ]\n",
+      "[                                                   ]\n",
+      "[           [           [ CITY   = 'PARIS'      ] ] ]\n",
+      "[           [ ADDRESS = [ NUMBER = 74           ] ] ]\n",
+      "[ SPOUSE  = [           [ STREET = 'RUE PASCAL' ] ] ]\n",
+      "[           [                                     ] ]\n",
+      "[           [ NAME    = 'KIM'                     ] ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "fs1 = nltk.FeatStruct('[SPOUSE = [ADDRESS = [CITY = \"PARIS\"]]]')\n",
+    "print(fs1.unify(fs0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By contrast, the result is very different if fs1 is unified with the structure-sharing version fs2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[               [ CITY   = 'PARIS'      ] ]\n",
+      "[ ADDRESS = (1) [ NUMBER = 74           ] ]\n",
+      "[               [ STREET = 'RUE PASCAL' ] ]\n",
+      "[                                         ]\n",
+      "[ NAME    = 'LEE'                         ]\n",
+      "[                                         ]\n",
+      "[ SPOUSE  = [ ADDRESS -> (1)  ]           ]\n",
+      "[           [ NAME    = 'KIM' ]           ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "fs2 = nltk.FeatStruct(\"\"\"[NAME = LEE, ADDRESS = (1)[NUMBER = 74, STREET = 'RUE PASCAL'],\n",
+    "                        SPOUSE = [NAME = KIM, ADDRESS -> (1)]]\"\"\")\n",
+    "\n",
+    "print(fs1.unify(fs2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Rather than just updating what was in effect Kim's \"copy\" of Lee's address, we have now updated both their addresses at the same time. More generally, if a unification adds information to the value of some path π, then that unification simultaneously updates the value of any path that is equivalent to π.\n",
+    "\n",
+    "Structure sharing can also be stated using variables such as ?x."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ ADDRESS1 = ?x ]\n",
+      "[ ADDRESS2 = ?x ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "fs1 = nltk.FeatStruct(\"[ADDRESS1 = [NUMBER =74, STREE = 'RUE PASCAL']]\")\n",
+    "fs2 = nltk.FeatStruct(\"[ADDRESS1 =?x, ADDRESS2 = ?x ]\")\n",
+    "print(fs2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ ADDRESS1 = (1) [ NUMBER = 74           ] ]\n",
+      "[                [ STREE  = 'RUE PASCAL' ] ]\n",
+      "[                                          ]\n",
+      "[ ADDRESS2 -> (1)                          ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(fs1.unify(fs2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### "
+   ]
   }
  ],
  "metadata": {
