--- a/NLTK Chapter 9.ipynb
+++ b/NLTK Chapter 9.ipynb
@@ -184,7 +184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pocessing Feature Structures\n",
+    "### Processing Feature Structures\n",
     "\n",
     "Feature Structures in NLTK are declared with the FeatStruct() constructor. Atomic feature values can be strings or integers"
    ]
@@ -743,8 +743,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### "
+    "### Extending a Feature Based Grammar\n",
+    "\n",
+    "##### Subcategorization\n",
+    "\n",
+    "In 8., we augmented our category labels to represent different kinds of verb, and used the labels IV and TV for intransitive and transitive verbs respectively. This allowed us to write productions like the following:\n",
+    "\n",
+    "(27)\t\t\n",
+    "VP -> IV<br>\n",
+    "VP -> TV NP\n",
+    "\n",
+    "Although we know that IV and TV are two kinds of V, they are just atomic nonterminal symbols from a CFG, as distinct from each other as any other pair of symbols. This notation doesn't let us say anything about verbs in general, e.g. we cannot say \"All lexical items of category V can be marked for tense\", since walk, say, is an item of category IV, not V. So, can we replace category labels such as  TV and IV by V along with a feature that tells us whether the verb combines with a following NP object or whether it can occur without any complement?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = 'play a song on itunes'\n",
+    "tokens= nltk.word_tokenize(string)\n",
+    "tags= nltk.pos_tag(tokens)\n",
+    "print(nltk.ne_chunk(tags).draw())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
